Report time blocked on prepare conflicts in CurOp/slow query logs

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • Execution Team 2024-07-22, Execution Team 2024-08-05, Execution Team 2024-08-19, Execution Team 2024-09-02, Execution Team 2024-09-16
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Would be a useful metric, and we could also exclude it from workingMillis to make logging more effective.

      If we do so, we should consider adding a global serverStatus counter for prepare conflict wait times.

            Assignee:
            Malik Endsley (Inactive)
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: